[project]
name = "rotorhazard"
version = "4.4.0-dev"
description = "FPV race timing and event management"
authors = [
    { name = "Michael Niggel"},
    { name = "Eric Thomas"}
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<4.0"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pip",
    "Flask (>=3.1.0,<3.2.0)",
    "itsdangerous (>=2.2.0,<2.3.0)",
    "Jinja2 (>=3.1.0,<3.2.0)",
    "Werkzeug (>=3.1.0,<3.2.0)",
    "MarkupSafe (>=3.0.0,<3.1.0)",
    "Flask-SocketIO (>=5.4.0,<5.5.0)",
    "python-socketio (>=5.8.0,<5.9.0)",
    "python-engineio (>=4.4.0,<4.5.0)",
    "websocket-client (>=1.5.0,<1.6.0)",
    "SQLAlchemy (>=2.0.0,<2.1.0)",
    "gevent (>=24.11.0,<24.12.0)",
    "gevent-websocket (>=0.10.0,<0.11.0)",
    "greenlet (>=3.1.0,<3.2.0)",
    "cffi (>=1.17.0,<1.18.0)",
    "pyserial (>=3.5.0,<3.6.0)",
    "requests (>=2.32.0,<2.33.0)",
    "packaging (>=24.0.0,<25.0.0)",
    "smbus2 (>=0.4.0,<0.5.0) ; platform_machine == 'armv7l' or platform_machine == 'aarch64'",
    "RPi.GPIO (>=0.7.0,<0.8.0) ; platform_machine == 'armv7l' or platform_machine == 'aarch64'",
    "rpi-ws281x (>=4.3.0,<4.4.0) ; platform_machine == 'armv7l' or platform_machine == 'aarch64'",
    "pi-ina219 (>=1.4.0,<1.5.0) ; platform_machine == 'armv7l' or platform_machine == 'aarch64'",
    "RPi.bme280 (>=0.2.0,<0.3.0) ; platform_machine == 'armv7l' or platform_machine == 'aarch64'",
]

[project.urls]
Homepage = "https://rotorhazard.com/"
Documentation = "https://github.com/RotorHazard/RotorHazard/tree/main/doc"
Repository = "https://github.com/RotorHazard/RotorHazard.git"
Issues = "https://github.com/RotorHazard/RotorHazard/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
rotorhazard = ['static/*', 'templates/*']